Compiler/src/main/java/Testing/Tests/SemanticTests/failing/InvalidOverrideReturn.ru
struct A{}

impl A{
.(){}
fn m1() -> void{} }

struct B : A{}

impl B{
.(){}
fn m1() -> Int{}}

start{}
